--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"autoprefixer": "^10.4.16",
 		"eslint": "^8.28.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"postcss": "^8.4.32",
 		"svelte": "^4.2.7",
+		"tailwindcss": "^3.3.7",
 		"vite": "^5.0.3"
 	},
 	"type": "module"
